--- a/package.json
+++ b/package.json
@@ -8,15 +8,7 @@
     "name": "Rikka",
     "url": "https://github.com/Muromi-Rikka"
   },
-  "licence": "MIT",
-  "homepage": "https://github.com/Trapar-waves/react-mantine-tailwind",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Trapar-waves/react-mantine-tailwind.git"
-  },
-  "bugs": {
-    "url": "https://github.com/Trapar-waves/react-mantine-tailwind/issues"
-  },
+  "licence": "AGPL-3.0",
   "keywords": [
     "react",
     "tailwind",
