--- a/package.json
+++ b/package.json
@@ -1,48 +1,77 @@
 {
-  "name": "@trapar-waves/react-mantine-tailwind",
+  "name": "maptile-preview",
   "type": "module",
   "version": "1.1.12",
-  "packageManager": "pnpm@10.16.1",
+  "packageManager": "pnpm@10.17.0",
+  "description": "A modern, responsive web application for previewing and managing map tile sources with support for multiple coordinate systems and map providers",
   "author": {
     "email": "admin@rikka.cc",
     "name": "Rikka",
     "url": "https://github.com/Muromi-Rikka"
   },
-  "licence": "AGPL-3.0",
+  "license": "MIT",
+  "homepage": "https://github.com/Muromi-Rikka/maptile-preview",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Muromi-Rikka/maptile-preview.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Muromi-Rikka/maptile-preview/issues"
+  },
   "keywords": [
     "react",
+    "typescript",
+    "map",
+    "tiles",
+    "maplibre-gl",
+    "mapbox",
+    "gis",
+    "mapping",
     "tailwind",
     "mantine",
-    "rsbuild",
-    "typescript"
+    "rsbuild"
   ],
+  "main": "dist/index.html",
   "publishConfig": {
     "access": "public"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "pnpm": ">=10.16.1"
   },
   "scripts": {
     "dev": "rsbuild dev --open",
     "build": "rsbuild build",
     "preview": "rsbuild preview",
     "lint": "eslint . --cache --max-warnings=0 --no-warn-ignored",
-    "postinstall": "husky"
+    "lint:fix": "eslint . --cache --fix --max-warnings=0 --no-warn-ignored",
+    "postinstall": "husky",
+    "docker:build": "docker build -t maptile-preview .",
+    "docker:run": "docker run -p 80:80 --name maptile-preview maptile-preview"
   },
   "dependencies": {
     "@mantine/core": "^8.3.1",
     "@mantine/hooks": "^8.3.1",
     "clsx": "^2.1.1",
     "destr": "^2.0.5",
-    "maplibre-gl": "^5.7.1",
+    "maplibre-gl": "^5.7.2",
     "ofetch": "^1.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-map-gl": "^8.0.4"
   },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead",
+    "not ie 11"
+  ],
   "devDependencies": {
     "@antfu/eslint-config": "^5.3.0",
     "@eslint-react/eslint-plugin": "^1.53.1",
-    "@iconify/json": "^2.2.384",
+    "@iconify/json": "^2.2.385",
     "@iconify/tailwind": "^1.2.0",
-    "@rsbuild/core": "^1.5.6",
+    "@rsbuild/core": "^1.5.8",
     "@rsbuild/plugin-react": "^1.4.0",
     "@tailwindcss/postcss": "^4.1.13",
     "@types/postcss-import": "^14.0.3",
@@ -51,7 +80,7 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9.35.0",
     "eslint-plugin-format": "^1.0.1",
-    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.6",
